--- a/src/components/signin.astro
+++ b/src/components/signin.astro
@@ -84,6 +84,8 @@ import Link from "@components/ui/link.astro";
           const formData = new FormData();
           formData.append("usr", emailValue);
           formData.append("pwd", passwordValue);
+          button.textContent = `Sigining in...`;
+          button.classList.add("animate-pulse");
 
           const response = await fetch(
             "https://mon8n.fly.dev/webhook/2dc5224f-8d7f-4581-a219-cc5a15f84589",
@@ -93,27 +95,39 @@ import Link from "@components/ui/link.astro";
             },
           );
 
-          const data = await response.json();
+          if (response.ok) {
+            const data = await response.json();
 
-          if (
-            data?.body["home_page"] === "/helpdesk/login" ||
-            data?.body["home_page"] === "/app"
-          ) {
-            const responseCookie = data.headers["set-cookie"];
-            const getSidToken = responseCookie[0].split(";");
+            if (
+              data &&
+              (data?.body["home_page"] === "/helpdesk/login" ||
+                data?.body["home_page"] === "/app")
+            ) {
+              const responseCookie = data.headers["set-cookie"];
+              const getSidToken = responseCookie[0].split(";");
 
-            document.cookie = `${getSidToken}; expires= ${addDaysToDate(
-              new Date(),
-              7,
-            )}; path=/; SameSite=Lax`;
-            document.cookie = responseCookie[1];
-            document.cookie = responseCookie[2];
-            document.cookie = responseCookie[3];
-            document.cookie = responseCookie[4];
-            localStorage.setItem("email", emailValue);
-            window.location.href = `/dashboard?email=${emailValue}`;
+              document.cookie = `${getSidToken}; expires= ${addDaysToDate(
+                new Date(),
+                7,
+              )}; path=/; SameSite=Lax`;
+              document.cookie = responseCookie[1];
+              document.cookie = responseCookie[2];
+              document.cookie = responseCookie[3];
+              document.cookie = responseCookie[4];
+              localStorage.setItem("email", emailValue);
+              window.location.href = `/dashboard?email=${emailValue}`;
+
+              button.textContent = "Redirecting";
+              button.classList.remove("animate-pulse");
+            } else {
+              button.textContent = "Sign in";
+              button.classList.remove("animate-pulse");
+              window.alert("Email not found");
+            }
           } else {
-            window.alert("Email not found");
+            button.textContent = "Sign in";
+            button.classList.remove("animate-pulse");
+            window.alert("Invalid Credentials");
           }
         } else {
           window.alert("Invalid Email");
