--- a/src/pages/hu/kapcsolat.astro
+++ b/src/pages/hu/kapcsolat.astro
@@ -144,7 +144,7 @@ changeLanguage("hu");
 					<div class="md:flex">
 						<div>
 							<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Szerződéses ügyfelünk?</h2>
-							<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200"><a href="https://support.monolithon.com">Üzenjen a support.monolithon.com-on!</a></br></br>
+							<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200"><a href="https://support.monolithon.com">Ügyfélszolgálat a support.monolithon.com-on.</a></br></br>
 							</p>
 
 							<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Vásárlás előtti kérdés?</h2>
